# AirMeter.IO.Firmware

./: .gitignore  .gitmodules  CHANGELOG.md  EraseFlash.bat  FlashAll.bat  FlashWeb.bat  Kconfig.projbuild  Makefile  README.md  build-esp8266-device-partition.sh  build-web-partition.sh  cloc_counted  cloc_exclude  cloc_include  flash-esp8266-device-partition.sh  flash-esp8266-web-partition.sh  flash-web-partition.sh  gzipwebui.py  jsonapi.md  partitions.csv
.github/workflows/: build-esp32.yml  build.yml  build8266.yml
common/: Common.h
components/: EPD.7z
components/BATTERY/: CMakeLists.txt
components/BATTERY/include/: BatteryManager.h
components/BATTERY/src/: BatteryManager.cpp
components/BITMAPFONT/: CMakeLists.txt
components/BITMAPFONT/include/: BitmapFont.h  FontFileStructure.h
components/BITMAPFONT/src/: BitmapFont.cpp
components/BME280/: CMakeLists.txt  component.mk
components/BME280/include/: BME280.h
components/BME280/src/: BME280.cpp
components/CO2SENSORS/: CMakeLists.txt
components/CO2SENSORS/include/: CO2Sensor.h  CubicCO2Sensor.h  MhZ19Sensor.h  SCD30Sensor.h  SenseairBase.h  SenseairI2CSensor.cpp  SenseairI2CSensor.h  SenseairModBusSensor.h
components/CO2SENSORS/src/: CMakeLists.txt  CO2Sensor.cpp  CubicCO2Sensor.cmds.txt  CubicCO2Sensor.cpp  MhZ19Sensor.cpp  SCD30Sensor.cpp  SenseairBase.cpp  SenseairI2CSensor.cpp  SenseairModbusSensor.cpp
components/DATAMANAGER/: CMakeLists.txt
components/DATAMANAGER/include/: BitReader.h  BitWriter.h  DataManager.h  DataManagerFlashDataStore.h  DataManagerQuery.h  DataManagerRamTemporaryStore.h  DataManagerStore.h  DataManagerStoreBucket.h  DataManagerStoreBucketReader.h  DataManagerStoreIndex.h  DataManagerStorePrivate.h
components/DATAMANAGER/src/: DataManager.cpp  DataManagerFlashDataStore.cpp  DataManagerQuery.cpp  DataManagerRamTemporaryStore.cpp  DataManagerStore.cpp  DataManagerStoreBucket.cpp  DataManagerStoreBucketReader.cpp  DataManagerStoreIndex.cpp
components/DRAWTARGET/: CMakeLists.txt
components/DRAWTARGET/include/: DrawTarget.h  ScreenDriver.h
components/DRAWTARGET/src/: DrawTarget.cpp
components/EPD/: CMakeLists.txt  Kconfig
components/EPD/include/: DEPG0213BN.h  DrawControlSSD16xx.h  DriverSSD1680.h  DriverSSD16xx.h  EPDBackBuffer.h  EPDDrawTarget.h  EpdSpi.h  SSD1680.h
components/EPD/src/: DEPG0213BN.cpp  DrawControlSSD16xx.cpp  DriverSSD1680.cpp  DriverSSD16xx.cpp  EPDBackBuffer.cpp  EPDDrawTarget.cpp  SSD1680.cpp  epdspi.cpp
components/GENERAL/: CMakeLists.txt
components/GENERAL/include/: DevicePersonality.h  EnumFlags.h  GeneralSettings.h  PasswordGenerator.h  SettingsBase.h  System.h  Utility.h
components/GENERAL/src/: DevicePersonality.cpp  GeneralSettings.cpp  PasswordGenerator.cpp  SettingsBase.cpp  System.cpp  Utility.cpp
components/GPIOROUTING/: CMakeLists.txt
components/GPIOROUTING/include/: ButtonManager.h  GpioManager.h
components/GPIOROUTING/src/: ButtonManager.cpp  GpioManager.cpp
components/HTTPSERVER/: CMakeLists.txt
components/HTTPSERVER/include/: HttpRequest.h  HttpServer.h  HttpUrlHandler.h  Json.h  JsonArray.h
components/HTTPSERVER/src/: HttpRequest.cpp  HttpServer.cpp  HttpUrlHandler.cpp  Json.cpp  JsonArray.cpp
components/I2C/: CMakeLists.txt
components/I2C/include/: I2C.h  I2CCompat.h  I2CDeviceSession.h  I2CDeviceSessionCommand.h
components/I2C/src/: I2C.cpp  I2CCompat.cpp  I2CDeviceSession.cpp  I2CDeviceSessionCommand.cpp
components/MQTTMANAGER/: CMakeLists.txt
components/MQTTMANAGER/include/: MqttManager.h
components/MQTTMANAGER/src/: MqttManager.cpp
components/POWERMANAGE/: CMakeLists.txt
components/POWERMANAGE/include/: PowerLock.h  PowerManagement.h
components/POWERMANAGE/src/: PowerLock.cpp  PowerManagement.cpp
components/QRCODE/: CMakeLists.txt  component.mk
components/QRCODE/include/: QRCodeGenerator.h
components/QRCODE/src/: QRCodeGenerator.cpp
components/SCREENMANAGER/: CMakeLists.txt
components/SCREENMANAGER/include/: FontManager.h  ScreenDefinition.h  ScreenDrivers.h  ScreenManager.h  StringWithValues.h
components/SCREENMANAGER/src/: FontManager.cpp  ScreenDefinition.cpp  ScreenDrivers.cpp  ScreenManager.cpp  StringWithValues.cpp
components/SECURITY/: CMakeLists.txt
components/SECURITY/include/: AccessLevels.h
components/SENSORMANAGER/: CMakeLists.txt
components/SENSORMANAGER/include/: SensorManager.h
components/SENSORMANAGER/src/: SensorManager.cpp
components/SOFTSERIAL/: CMakeLists.txt
components/SOFTSERIAL/include/: HWSerial.h  PinSerial.h  SoftSerial.h
components/SOFTSERIAL/src/: HWSerial.cpp  PinSerial.cpp  SoftSerial.cpp  softuart.c
components/WIFI/: CMakeLists.txt
components/WIFI/include/: CaptiveDNS.h  Wifi.h  WifiManager.h  WifiSettings.h  WifiTask.h
components/WIFI/src/: CaptiveDNS.cpp  Wifi.cpp  WifiManager.cpp  WifiSettings.cpp  WifiTask.cpp
device/: Comfortaa-Light-25.afnt  Manrope-Regular-12.afnt  Manrope-Regular-18.afnt  Manrope-Regular-25.afnt  Roboto-Regular-12.afnt  Roboto-Regular-25.afnt  Roboto-Regular-8.afnt  device.json  fonts.json  ssd16xx.json  ui.json
docs/: esp32_build.md  esp8266_build.md
edpui/: fonts.json  ui.json
main/: ButtonManager.cpp  ButtonManager.h  CMakeLists.txt  CalibrationCommands.cpp  CalibrationCommands.h  CaptiveRedirectHandler.cpp  CaptiveRedirectHandler.h  CommandHandler.cpp  CommandHandler.h  DataManager.cpp  DataManager.h  DataManagerFlashDataStore.cpp  DataManagerFlashDataStore.h  DataManagerPrivate.h  DataManagerQuery.cpp  DataManagerQuery.h  DataManagerRamTemporaryStore.cpp  GeneralSettings.cpp  GeneralSettings.h  KConfig  Kconfig  Logo.h  Logo.xbm  MonitorDisplay.cpp  MonitorDisplay.h  MqttManager.cpp  MqttManager.h  OledSsd1306Display.cpp  OledSsd1306Display.h  SensorManager.cpp  SensorManager.h  SetupCommands.cpp  SetupCommands.h  ValueModel.h  ViewCommands.cpp  ViewCommands.h  WebContentHandler.cpp  WebContentHandler.h  component.mk  main.cpp  (+1 more)
sensorapis/: cubic.md
webui/: package-lock.json  package.json  webpack.config.js
webui/src/: index.html  (+7 more)
webui2/: package.json  tsconfig.json  webpack.config.js
(+108 files in other folders)
