idf_component_register(
   SRCS "CalibrationCommands.cpp"
        "CaptiveRedirectHandler.cpp"
        "CommandHandler.cpp"
        "DataManager.cpp"
        "DataManagerFlashDataStore.cpp"
        "DataManagerQuery.cpp"
        "DataManagerRamTemporaryStore.cpp"
        "GeneralSettings.cpp"
        "main.cpp"
        "MonitorDisplay.cpp"
        "MqttManager.cpp"
        "OledSsd1306Display.cpp"
        "SensorManager.cpp"
        "SetupCommands.cpp"
        "ViewCommands.cpp"
        "WebContentHandler.cpp"
    INCLUDE_DIRS "."
                 "../common"
    REQUIRES "json"
             "nvs_flash"
             "HTTPSERVER"
             "BME280"
             "CO2SENSORS"
             "FRAM"
             "GENERAL"
             "I2C"
             "MQTTCon"
             "QRCODE"
             "SNTP"
             "SOFTSERIAL"
             "SSD1306"
             "WIFI"
             "mqtt"
             "spiffs"
             "esp_http_server"
             "ESP8266-RTOS-FONTS"
             "ESP8266-RTOS-SSD1306"
             "CalEPD"
             "esp_timer"
             "EPD"
             "GPIOROUTING"
             "UTF8"
             "SCREENMANAGER"
             "BATTERY")
             
spiffs_create_partition_image(web ../webui/distgz FLASH_IN_PROJECT)
spiffs_create_partition_image(dev ../device FLASH_IN_PROJECT)