idf_component_register(
  SRCS "src/CO2Sensor.cpp"
    "src/CubicCO2Sensor.cpp"
    "src/MhZ19Sensor.cpp"
    "src/SenseairBase.cpp"
    "src/SenseairI2CSensor.cpp"
    "src/SenseairModbusSensor.cpp"
    "src/SCD30Sensor.cpp"
  INCLUDE_DIRS "include"
              "../../common"
  REQUIRES "json"
          "nvs_flash"
          "I2C"
          "HTTPSERVER"
          "SOFTSERIAL"
          "GENERAL"
          "VALUES"
          "mqtt"
          "spiffs"
          "esp_http_server"
          "driver"
          "esp_wifi"
)