idf_component_register(
  SRCS "src/SSD1680.cpp"
    "src/EPDBackBuffer.cpp"
    "src/EPDDrawTarget.cpp"
    "src/DriverSSD1680.cpp"
    "src/epdspi.cpp"
  INCLUDE_DIRS "include"
              "../../common"
  REQUIRES "json"
          "nvs_flash"
          "I2C"
          "esp_timer"
          "HTTPSERVER"
          "mqtt"
          "spiffs"
          "esp_http_server"
          "GPIOROUTING"
          "BITMAPFONT"
          "driver"
          "esp_wifi"
)