idf_component_register(
  SRCS "src/PinSerial.cpp"
      "src/SoftSerial.cpp"
      "src/HWSerial.cpp"
      "src/softuart.c"
  INCLUDE_DIRS "include"
                "../../common"
  REQUIRES "json"
           "nvs_flash"
           "mqtt"
           "spiffs"
           "esp_http_server"
           "hal" 
           "esp_hw_support"
           "driver"
           "esp_wifi"
           "GENERAL")