idf_component_register(
  SRCS "src/CaptiveDNS.cpp"
    "src/Wifi.cpp"
    "src/WifiTask.cpp"    
    "src/WifiManager.cpp"
    "src/WifiSettings.cpp"
  INCLUDE_DIRS "include"
              "../../common"
  REQUIRES "json"
          "nvs_flash"
          "mqtt"
          "spiffs"
          "HTTPSERVER"
          "SSD1306"
          "esp_http_server"
          "driver"
          "esp_wifi"
          "VALUES"
)